# openmoxie

./: .dockerignore  .env.backup.20250913_171306  .env.example  .env.test  .flake8  .gitignore  60_SECOND_LAUGH_FIX_SUMMARY.md  DEPLOYMENT.md  DEV_SETUP.md  Dockerfile  EMQX_SETUP.md  MOSQUITTO_SECURITY.md  Moxie's Animation Database.csv  TEST_RESULTS.md  cloudtts.proto  dev-check.sh  dev-fix.sh  dev-start.sh  dev-stop.sh  docker-compose.yml  emqx.Dockerfile  gunicorn.conf.py  main.py  pyproject.toml  repair_robot.py  repair_status.py  requirements-dev.txt  requirements.txt  run_tests.py  setup-dev.sh  setup_mosquitto_auth.sh  start_server.sh  test_60_second_laugh.py  test_60_second_manual.py  test_claude_integration.py  test_dj_mix.py  test_emqx.sh  test_improvements.py
.github/: CODEOWNERS
site/: db.sqlite3
site/data/: acl  emqx.conf  log.conf  openmoxie.conf  passwd
site/hive/: auth_utils.py  behavior_config.py  data_import.py  dj_mix_config.py  env_validator.py  health.py  markup_validator.py  models.py  urls.py  validators.py  views.py  views_improved.py
site/hive/management/commands/: runserver.py
site/hive/migrations/: 0001_initial.py  0002_add_database_indexes.py
site/hive/mqtt/: ai_factory.py  claude_service.py  cloudtts_handler.py  global_responses.py  moxie_remote_chat.py  moxie_server.py  robot_credentials.py  robot_data.py  scheduler.py  zmq_stt_handler.py
site/hive/mqtt/protos/embodied/unity/: __init__.py  cloudtts_pb2.py
site/hive/templates/hive/: animation_tester.html  dashboard.html  dj_panel.html  moxie.html  puppet.html
site/openmoxie/: middleware.py  settings.py  settings_old.py  urls.py
site/openmoxie/settings/: __init__.py  base.py  development.py  development_8001.py  production.py  staging.py
