[project]
name = "openmoxie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "cryptography==44.0.1",
    "deepmerge==2.0",
    "distro==1.9.0",
    "django==5.1.6",
    "django-bootstrap5==24.3",
    "django-debug-toolbar==5.0.1",
    "django-jquery==3.1.0",
    "exceptiongroup==1.2.2",
    "gevent>=25.5.1",
    "gunicorn[gevent]>=23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "jwt==1.3.1",
    "numpy==1.26.4",
    "openai[datalib]==1.65.1",
    "paho-mqtt==2.1.0",
    "pillow==11.1.0",
    "protobuf==4.25.3",
    "psycopg[binary]>=3.2.9",
    "pycparser==2.22",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "qrcode==8.0",
    "requests==2.32.3",
    "sentry-sdk>=2.35.0",
    "sniffio==1.3.1",
    "soundfile==0.12.1",
    "sqlparse==0.5.3",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "unidecode==1.3.8",
    "urllib3==2.3.0",
    "whitenoise>=6.7.0",
    "anthropic>=0.40.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["*/migrations/*", "*/venv/*", "*/node_modules/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "openmoxie.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing --reuse-db"
testpaths = ["site", "tests"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "openmoxie.settings"

[tool.coverage.run]
source = ["."]
omit = [
    "*/venv/*",
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
